fix TriMAD symposium

--- a/content/event/2018-09-21.md
+++ b/content/event/2018-09-21.md
@@ -1,5 +1,5 @@
 +++
-title = "TriMAD Symposium"
+title = "8th Translational Research in Mitochondria, Aging, and Disease (TriMAD) Symposium"
 date = 2003-01-01T00:00:00  # Schedule page publish date.
 draft = false
 
@@ -16,7 +16,7 @@ event_types = ["4"]
 presenters = []
 
 # Abstract and optional shortened version.
-abstract = "The Keynote Speaker for this event is Dr. Joann B. Sweasy, Ph.D., Ensign Professor and Vice-Chair, Department of Therapeutic Radiology, Yale University School of Medicine, and Associate Director for Basic Science, Yale Comprehensive Cancer Center.  Dr. Sweasy’s research has been continuously funded by the NIH since 1994, and focuses on determining the roles of DNA repair in human diseases, using biochemistry and mouse models. She will speak about her recent research showing the critical roles for DNA repair in preventing the autoimmune disease, systemic lupus erythematosus. The retreat also will include short talks by former graduate students and current Penn State faculty, and a poster session."
+abstract = "In recent years, research focusing on the role of mitochondria as it relates to aging and disease has grown exponentially, bringing great understanding to and growing interest in the mitochondrial mechanisms that impact human disease and aging.  The 8th Regional Translational Research in Mitochondria, Aging and Disease TRiMAD Symposium will be host to some of the top investigators in the field."
 abstract_short = ""
 
 # Event start and end times.
