upper case an R

--- a/content/event/2018-09-21.md
+++ b/content/event/2018-09-21.md
@@ -1,5 +1,5 @@
 +++
-title = "8th Translational Research in Mitochondria, Aging, and Disease (TriMAD) Symposium"
+title = "8th Translational Research in Mitochondria, Aging, and Disease (TRiMAD) Symposium"
 date = 2003-01-01T00:00:00  # Schedule page publish date.
 draft = false
 
