Added presenter and title, per Donna

--- a/content/event/2019-11-13.md
+++ b/content/event/2019-11-13.md
@@ -1,9 +1,9 @@
 +++
-title = "To be announced"
+title = "Stem Cell Models for Studying Normal and Malignant Hematopoiesis"
 date = 2003-01-01T00:00:00  # Schedule page publish date.
 draft = false
 event_types = ["1"]
-presenters = ["To be announced"]
+presenters = ["Irina Elcheva"]
 time_start = 2019-11-13T16:00:00
 time_end = 2019-11-13T17:00:00
 location = "501 Wartik Lab"
