--- a/content/event/2019-12-04.md
+++ b/content/event/2019-12-04.md
@@ -1,5 +1,5 @@
 +++
-title = "To be announced"
+title = "Tracking Plasmid Heteroplasmy in Experimental Evolution"
 date = 2003-01-01T00:00:00  # Schedule page publish date.
 draft = false
 event_types = ["1"]
