changed wording of public lecture event

--- a/content/event/2020-02-22.md
+++ b/content/event/2020-02-22.md
@@ -1,5 +1,5 @@
 +++
-title = "Predicting mutation and disease occurrence from DNA and omics data"
+title = "Frontiers public lecture: Predicting mutation and disease occurrence from DNA and omics data"
 date = 2003-01-01T00:00:00  # Schedule page publish date.
 draft = false
 event_types = ["5"]
