-- added field url_custom for SNA_day

--- a/content/event/2023-04-18.md
+++ b/content/event/2023-04-18.md
@@ -12,6 +12,7 @@ selected = true
 projects = []
 tags = ["SNA_day"]
 event_url = "https://www.bx.psu.edu/sna_day/"
+url_custom = [{name="Event Site", url="https://www.bx.psu.edu/sna_day/"}]
 url_zoom = ""  # https://live.libraries.psu.edu/Mediasite/Play/bae50a40a0d945fa88d766a7b251ac651d
 math = false
 highlight = true
